<resources>
    <string name="app_name">Pettify</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_user_list">User List</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="users">Users</string>
    <string name="reports">Reports</string>
    <string name="add">ADD</string>
    <string name="menu_register">Register</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="menu_login">Login</string>
    <string-array name="animal_types_array">
        <item>Dog</item>
        <item>Cat</item>
        <item>Bird</item>
        <item>Other</item>
    </string-array>
    <string-array name="report_types_array">
        <item>Lost</item>
        <item>Injured</item>
    </string-array>
    <string-array name="map_types">
        <item  style="@style/GreenText">Normal Map</item>
        <item>Hybrid Map</item>
        <item>Satellite Map</item>
        <item>Terrain Map</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="navheader_button">navheader_button</string>
</resources>