<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.pettify.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/userslist_list"
        android:name="com.pettify.ui.user.UserListFragment"
        android:label="Users List"
        tools:layout="@layout/fragment_user_list" />

    <fragment
        android:id="@+id/reportslist_list"
        android:name="com.pettify.ui.report.ReportListFragment"
        android:label="Reports Feed"
        tools:layout="@layout/fragment_report_list" >
        <action
            android:id="@+id/action_reportslist_list_to_view_report"
            app:destination="@id/view_report" />
    </fragment>

    <fragment
        android:id="@+id/create_report"
        android:name="com.pettify.ui.report.CreateReportFragment"
        android:label="Create Report"
        tools:layout="@layout/fragment_create_report" >
        <action
            android:id="@+id/action_create_report_to_reportslist_list"
            app:destination="@id/reportslist_list" />
    </fragment>

    <fragment
        android:id="@+id/view_report"
        android:name="com.pettify.ui.report.ViewReportFragment"
        android:label="View Report"
        tools:layout="@layout/fragment_view_report" >
        <argument
            android:name="reportId" />
    </fragment>

    <fragment
        android:id="@+id/nav_login"
        android:name="com.pettify.ui.auth.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/nav_register"
        android:name="com.pettify.ui.auth.RegisterFragment"
        android:label="@string/menu_register"
        tools:layout="@layout/fragment_register" />
    <fragment
        android:id="@+id/account"
        android:name="com.pettify.ui.user.AccountFragment"
        android:label="fragment_account"
        tools:layout="@layout/fragment_account" />
</navigation>